--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_URL=http://ec2-54-147-89-189.compute-1.amazonaws.com:3001/
+REACT_APP_S3_URL=https://osg-image-bucket.s3-eu-west-1.amazonaws.com/
