--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "request": "^2.88.2"
   },
   "scripts": {
