--- a/ansible/playbook_cicd.yml
+++ b/ansible/playbook_cicd.yml
@@ -34,7 +34,7 @@
       shell: docker pull filippandza/medical-images-client
 
     - name: Run docker image
-      shell: docker run filippandza/medical-images-client -p 4000:4000
+      shell: docker run -p 4000:4000 filippandza/medical-images-client
       
     #- name: Download docker-compose
     #  shell: curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
