--- a/ansible/playbook_cicd.yml
+++ b/ansible/playbook_cicd.yml
@@ -30,11 +30,37 @@
     - name: Update apt and install docker-ce
       apt: update_cache=yes name=docker-ce state=latest
 
+    #true flag so it doesn't return error if they don't exist  
+    - name: Stop container process, delete container, and delete image
+      shell: docker stop osg-client || true && docker rm osg-client || true && docker rmi filippandza/medical-images-client || true
+
+    #- name: Delete container
+    #  shell: docker rm osg-client
+
+    #- name: Delete image
+    #  shell: docker rmi filippandza/medical-images-client      
+      
     - name: Pull docker image
       shell: docker pull filippandza/medical-images-client
 
-    - name: Run docker image
-      shell: docker run -p 4000:4000 filippandza/medical-images-client
+    #- name: Run docker image
+    #  shell: docker run -p 4000:4000 filippandza/medical-images-client
+      
+    - name: Download docker-compose
+      shell: curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+
+    - name: Apply executable permissions to the binary
+      shell: chmod +x /usr/local/bin/docker-compose
+
+    - name: Copy Docker-Compose file
+      become: no
+      copy:
+        src: ./test/docker-compose.yml
+        dest: ~/docker-compose.yml
+        mode: '0644'
+
+    - name: Start services with docker-compose
+      shell: docker-compose up -d
       
     #- name: Download docker-compose
     #  shell: curl -L "https://github.com/docker/compose/releases/download/1.25.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
