--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "^3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "serve": "^11.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
