--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=process.env.REACT_APP_API_URL
-REACT_APP_S3_URL=process.env.REACT_APP_S3_URL
-REACT_APP_ML_URL=process.env.REACT_APP_ML_URL
+REACT_APP_API_URL=https://core.uva.integraliq.co/
+REACT_APP_S3_URL=https://osg-image-bucket.s3-eu-west-1.amazonaws.com/
+REACT_APP_ML_URL=http://ec2-34-240-4-157.eu-west-1.compute.amazonaws.com/
