--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_URL=http://ec2-35-174-105-4.compute-1.amazonaws.com:3001/
 REACT_APP_S3_URL=https://osg-image-bucket.s3-eu-west-1.amazonaws.com/
-REACT_APP_ML_URL=http://ec2-34-240-4-157.eu-west-1.compute.amazonaws.com/
+REACT_APP_ML_URL=http://ec2-34-247-102-1.eu-west-1.compute.amazonaws.com:5000/
