--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_URL=https://core.uva.integraliq.co/
 REACT_APP_S3_URL=https://osg-image-bucket.s3-eu-west-1.amazonaws.com/
-REACT_APP_ML_URL=https://ec2-34-247-102-1.eu-west-1.compute.amazonaws.com:5000/
+REACT_APP_ML_URL=https://ml.uva.integraliq.co/
