--- a/ansible/test/docker-compose.yml
+++ b/ansible/test/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
       - 'REACT_APP_API_URL=https://core.uva.integraliq.co'
       - 'REACT_APP_S3_URL=https://osg-image-bucket.s3-eu-west-1.amazonaws.com/'
-      - 'REACT_APP_ML_URL=http://ec2-34-240-4-157.eu-west-1.compute.amazonaws.com/'
+      - 'REACT_APP_ML_URL=http://ec2-3-86-253-29.compute-1.amazonaws.com'
     labels:
       - "traefik.enable=true"
       - "traefik.frontend.entryPoints=http,https"
